--- a/steps/compliance/have-a-mrn/template.html
+++ b/steps/compliance/have-a-mrn/template.html
@@ -1,5 +1,6 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import formSection, selectionButtons %}
+{% from "components/fields.njk" import formSection %}
+{% from "components/common/radio.njk" import govRadio %}
 
 {% block pageTitle %}{{ content["titleHead" + suffix] }} - {{ commonContent[htmlLang].windowTitleSuffix }}{% endblock %}
 {% set title = content["title" + suffix] %}
@@ -12,14 +13,10 @@
             <p class="govuk-body">{{ content[benefitCode.toLowerCase()].subtitle_para2 | safe }}</p>
         {% endif %}
 
-        {{ selectionButtons(
-            fields.haveAMRN,
-            content["subtitle" + suffix],
-            hint = '',
-            options = [
-                { label: content.fields.haveAMRN["yes" + suffix], value: "yes" },
-                { label: content.fields.haveAMRN["no" + suffix],  value: "no" }
-            ])
-        }}
+        {{ govRadio(field = fields.haveAMRN, headerText=content["title" + suffix], hideQuestion = true, isPageHeading=false,
+            items = [
+                { value: "yes", text: content.fields.haveAMRN["yes" + suffix] },
+                { value: "no", text: content.fields.haveAMRN["no" + suffix] }
+        ]) }}
     {% endcall %}
 {% endblock %}
