--- a/steps/identity/appellant-ibca-reference/template.html
+++ b/steps/identity/appellant-ibca-reference/template.html
@@ -6,7 +6,8 @@
 
 {% block fields %}
     {% call formSection() %}
-      {{ govTextInput(fields.ibcaReference,
+        <p class="govuk-body">{{ content.subtitle }}</p>
+        {{ govTextInput(fields.ibcaReference,
           content.fields.ibcaReference.title,
           hideLabel = false,
           isPageHeading = false) }}
