SSCSCI-1567: Accessibility name change link fix and headings (#1603)
* SSCSCI-1567: Adding accessibility name to all CYA change buttons

* SSCSCI-1567: mrn date change for headings

* SSCSCI-1567: Changing header tag on the hearing screen

* SSCSCI-1567: adding param to header to change to h2

* SSCSCI-1567: Updating header for evidence upload screen

* Trigger Build

* Improving change link of appointee to state its the appointee

---------

Co-authored-by: nilay <nilay.patel@solirius.com>
Co-authored-by: jessieharrigan <144362161+jessieharrigan@users.noreply.github.com>

--- a/steps/hearing/the-hearing/template.html
+++ b/steps/hearing/the-hearing/template.html
@@ -7,19 +7,19 @@
 {% block fields %}
   <p class="govuk-body">{{ content.subtitle }}</p>
 
-  <p class="govuk-heading-m">{{ content.hearingFormatsList.title }}</p>
-  <p class="govuk-body">{{ content.hearingFormatsList.subtitle }}</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>{{ content.hearingFormatsList.bulletPoint1 }}</li>
-    <li>{{ content.hearingFormatsList.bulletPoint2 }}</li>
-  </ul>
+        <h2 class="govuk-heading-m">{{ content.hearingFormatsList.title }}</h2>
+        <p class="govuk-body">{{ content.hearingFormatsList.subtitle }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>{{ content.hearingFormatsList.bulletPoint1 }}</li>
+            <li>{{ content.hearingFormatsList.bulletPoint2 }}</li>
+        </ul>
 
-  <p class="govuk-heading-m">{{ content.hearingSupportList.title }}</p>
-  <p class="govuk-body">{{ content.hearingSupportList.subtitle }}</p>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>{{ content.hearingSupportList.bulletPoint1 }}</li>
-    <li>{{ content.hearingSupportList.bulletPoint2 }}</li>
-  </ul>
+        <h2 class="govuk-heading-m">{{ content.hearingSupportList.title }}</h2>
+        <p class="govuk-body">{{ content.hearingSupportList.subtitle }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>{{ content.hearingSupportList.bulletPoint1 }}</li>
+            <li>{{ content.hearingSupportList.bulletPoint2 }}</li>
+        </ul>
 
   <p class="govuk-body">{{ content.hearingSupportList.information | safe }}</p>
 
