Sscsci 1612 iba accessibility aria label (#1616)
* SSCSCI-1611: Adding path to gain access to radio component

* SSCSCI-1611: Removing browser validation from date fields

* SSCSCI-1611: Making extended title optional so fieldset can be header if no extra text on page

* SSCSCI-1611: Importing gov component radio to use through own macro

* SSCSCI-1611: Importing new radio component

* SSCSCI-1611: Importing radio component and clean up

* SSCSCI-1611: Reverting design changes but cleaning params

* SSCSCI-1611: Fixes to radio component for error line and message and hideQuestion option

* Refactoring the appellant-role based on radio changes

* SSCSCI-1611: Refactoring appellant in mainland uk page

* SSCSCI-1611: Text message radio refactor

* SSCSCI-1611: Rep pages with new radio component

* SSCSCI-1611: evidence-provide page refactored with radio

* SSCSCI-1611: The hearing pages with gov radio component

* SSCSCI-1603:Create account page with new gov radio component

* SSCSCI-1611: availability page radio and formatting of appellant role

* SSCSCI-1611: Fixing all playwright tests due to new radio id

* SSCSCI-1611: fixing smoke test

* temp fix for smoke

* SSCSCI:1611: Refactoring smoke test change

* Mess up Timi's PR

* Adding gov buttons again and formatting

* Implementing the gov radio

* Implementing gov radio and removing unused references to selectionbutton

* Changing to radio buttons for other benefit type journey

* SSCSCI-1612: Adding text input gov component macro

* IBCA ref text input change

* Appellant name text input change

* Implementing gov radio and js function for language preferences and fixing javascript for components

* Removing unused imports

* SSCSCI-1612: Replacing appellant contact with gov text box

* SSCSCI-1611: Adding checkbox and implementing on arrangements

* SSCSCI-1611: Implementing new checkbox on hearing options

* SSCSCI-1611: Adding deprecated comment to selectionButton and removing selectionButtons

* Lint fix

*

--- a/steps/identity/appellant-ibca-reference/template.html
+++ b/steps/identity/appellant-ibca-reference/template.html
@@ -1,11 +1,15 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox, formSection %}
+{% from "components/fields.njk" import formSection %}
+{% from "components/common/textInput.njk" import govTextInput %}
 
 {% set title = content.title %}
 
 {% block fields %}
     {% call formSection() %}
-            <p class="govuk-body">{{ content.subtitle }}</p>
-        {{ textbox(fields.ibcaReference, content.fields.ibcaReference.title, hint="") }}
+        <p class="govuk-body">{{ content.subtitle }}</p>
+        {{ govTextInput(fields.ibcaReference,
+          content.fields.ibcaReference.title,
+          hideLabel = false,
+          isPageHeading = false) }}
     {% endcall %}
 {% endblock %}
