--- a/steps/hearing/options/template.html
+++ b/steps/hearing/options/template.html
@@ -1,28 +1,27 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import textbox %}
 {% from "components/common/checkbox.njk" import govCheckbox %}
+{% from "components/common/textInput.njk" import govTextInput %}
 
 {% set title = content.title %}
+
+{% set telephoneTextField %}
+{{ govTextInput(fields.selectOptions.telephone.phoneNumber, content.fields.options.telephone.error.required, hideLabel=true) }}
+{% endset -%}
+
+{% set emailTextField %}
+{{ govTextInput(fields.selectOptions.video.email, content.fields.options.video.error.required, hideLabel=true) }}
+{% endset -%}
 
 {% block fields %}
     <p class="govuk-body">{{ content.subtitle }}</p>
     <p class="govuk-body">{{ content.tribunalExplained }}</p>
     <p class="govuk-body">{{ content.supportExplained }}</p>
-    <p class="govuk-heading-m">{{ content.fields.title }}</p>
-    <p class="govuk-hint">{{ content.instructions }}</p>
-
-{% set telephoneTextField %}
-    {{ textbox(fields.selectOptions.telephone.phoneNumber, hideLabel=true, value=phoneNumber) }}
-{% endset -%}
-
-{% set emailTextField %}
-    {{ textbox(fields.selectOptions.video.email, hideLabel=true, value=email) }}
-{% endset -%}
 
 {{ govCheckbox(
   field = fields.selectOptions,
-  headerText = '',
-  hideQuestion = true,
+  headerText = content.fields.title,
+  hint = content.instructions,
+  hideQuestion = false,
   isPageHeading = false,
   items = [
     {
