--- a/steps/identity/appellant-in-mainland-uk/template.html
+++ b/steps/identity/appellant-in-mainland-uk/template.html
@@ -2,7 +2,8 @@
 {% from "components/fields.njk" import formSection %}
 {% from "components/common/radio.njk" import govRadio %}
 
-{% set title = content.titleNI if featureToggles.allowNI else content.title  %}
+{% set title = content.titleNI if allowNiEnabled else content.title  %}
+
 
 {% block fields %}
     {% call formSection() %}
