SSCSCI-1812 - NI changes final (#1707)
* add NI

* update IBC appeals text NI

* fix typo

* update lock

* reverse to yarn 3.6.1

* fix yarn

* fix yarn

* fix yarn

* usr pr as sscs api

* Bumping chart version/ fixing aliases

* usr pr as sscs api

* usr pr as sscs api

* revert helm chart change

* Bumping chart version/ fixing aliases

* usr pr as sscs api

* Update Chart.yaml

* Bumping chart version/ fixing aliases

* overwrite TRIBUNALS_CASE_API_URL

* Update Chart.yaml

* overwrite TRIBUNALS_CASE_API_URL

* Bumping chart version/ fixing aliases

* Implement english NI content

* Implement Welsh NI content

* Remove yarn.lock from PR

* Resolve yarn.lock conflict by using version from main

* Resolve yarn.lock conflict by using version from main

* Update unit tests to handle questionNI content

* revert helm bump

* add NI welsh

* add controller tests for NI postcodes

* Update controllerNI.test.js

* Update controller.js

* add bcNiPostcodes feature flag

* Revert "add bcNiPostcodes feature flag"

This reverts commit 13d2344860bcf031590d109f8ef1409de2de42dc.

* add bcNiPostcodes feature flag

* add custom var for NI

* typo

* typo

* Revert last 4 commits back to 07664e2

* Remove feature toggle

* setup Ni feature flag

* remove dead code

* Ni postcode lookup

* Ni postcode lookup

* Ni tests fix

* Ni tests fix

* Update appellantDetails.js

* Ni tests fix

* Ni tests fix

* Ni tests fix

* Ni tests sonar fix

* Ni tests sonar fix

* fix ni functional tests

* set alloNI to false by default

* enable allowNI

* update contentIba json files

* update contentIba json files

* update contentIba json files

* overwrite textboxLabelNI

* update textboxLabelNI set ni feature to false

* replace nunjucx by simple if

* change env name for NI

* force NI to false

* force tamplate to not NI

* new allow NI

* fix allowNiEnabled

* Update language-preference.js

* Update language-preference.js

* Update language-preference.js

* Update language-preference.js



--- a/steps/identity/appellant-international-contact-details/template.html
+++ b/steps/identity/appellant-international-contact-details/template.html
@@ -4,6 +4,7 @@
 {% from "components/common/textInput.njk" import govTextInput %}
 
 {% set title = content.title %}
+{% set portOfEntryHint = content.fields.portOfEntry.hintNI if allowNiEnabled else content.fields.portOfEntry.hint %}
 
 {% block fields %}
     {% call formSection() %}
@@ -12,7 +13,7 @@
         {{ govTextInput(fields.addressLine2,    content.fields.addressLine2.title,      isPageHeading = false) }}
         {{ govTextInput(fields.townCity,        content.fields.townCity.title,          isPageHeading = false) }}
         {{ select(fields.country,               content.fields.country.title,           options=getCountries) }}
-        {{ select(fields.portOfEntry,           content.fields.portOfEntry.title,       hint=content.fields.portOfEntry.hint,  options=getPortOfEntryList)}}
+        {{ select(fields.portOfEntry,           content.fields.portOfEntry.title,       hint=portOfEntryHint,  options=getPortOfEntryList)}}
         {{ govTextInput(fields.phoneNumber,
             content.fields.phoneNumber.title,
             hint=content.fields.phoneNumber.hint,
