remove old cookie-banner

--- a/steps/policy-pages/cookie-policy/template.html
+++ b/steps/policy-pages/cookie-policy/template.html
@@ -1,5 +1,1 @@
-{% if featureToggles.cookieBanner() == "true" %}
-    {% include "./new-cookie-policy.html" %}
-{% else %}
-    {% include "./old-cookie-policy.html" %}
-{% endif %}
+{% include "./cookie-policy.html" %}
